fix: Giscus URL 이중 인코딩 문제 및 favicon 경로 수정
- Giscus mapping을 pathname에서 title로 변경하여 한글 URL 이중 인코딩 문제 해결
- giscus.html에 data-term 속성 추가하여 포스트 제목 직접 사용
- favicon 경로를 relative_url에서 absolute_url로 변경하여 404 에러 해결

--- a/_includes/giscus.html
+++ b/_includes/giscus.html
@@ -21,6 +21,7 @@
               data-category="{{ site.giscus.category }}"
               data-category-id="{{ site.giscus.category_id }}"
               data-mapping="{{ site.giscus.mapping }}"
+              {% if site.giscus.mapping == "title" %}data-term="{{ page.title | escape }}"{% endif %}
               data-strict="0"
               data-reactions-enabled="{{ site.giscus.reactions_enabled }}"
               data-emit-metadata="{{ site.giscus.emit_metadata }}"
