Add Daum search registration info, chat widget, and update assets

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,5 +12,7 @@
   </main>
 
   {% include footer.html %}
+  {% include chat-widget.html %}
+  <script src="{{ "/assets/js/chat-widget.js" | relative_url }}"></script>
 </body>
 </html>
