--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,4 +36,4 @@
   </div>
 </footer>
 
-<script src="{{ "/assets/js/main.js" | relative_url }}"></script>
+<script src="{{ "/assets/js/main.js" | relative_url }}" defer></script>
