--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: 'ko' }}">
 {% include head.html %}
+{% include sentry.html %}
 {% include error-handler.html %}
 <body>
   <a href="#main-content" class="skip-link">본문으로 건너뛰기</a>
